[package]
name = "kitsune"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
axum = "0.6.8"
sync_wrapper = "0.1.2"
kitsune = { git = "https://github.com/aumetra/kitsune", rev = "84f8d55cd10ab2281ce" }
kitsune-db = { git = "https://github.com/aumetra/kitsune", rev = "84f8d55cd10ab2281ce" }
migration = { git = "https://github.com/aumetra/kitsune", rev = "84f8d55cd10ab2281ce" }
shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
sqlx = "0.6.2"
tracing-subscriber = "0.3.16"
sea-orm = "0.11.0"
shuttle-secrets = "0.10.0"
tokio = "1.22.0"
anyhow = "1.0.69"